# mySchool_v.1.0

./: .env  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  makefile  pyproject.toml  requirements.txt
apps/classes/: serializer.py  urls.py  (+2 more)
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/apps/classes/: models.py  serializer.py  urls.py  utils.py  views.py
backend/apps/expense/: apps.py  models.py  serializer.py  urls.py  utils.py  views.py
backend/apps/fees/: serializer.py  urls.py  util.py  views.py
backend/apps/payments/: models.py  signals.py  urls.py  utils.py  views.py
backend/apps/school/: models.py  permissions.py  serializer.py  signals.py  urls.py  utils.py
backend/apps/school/views/: school.py  term.py
backend/apps/students/: models.py  serializer.py  signals.py  urls.py  utils.py  views.py
backend/apps/user/: models.py  permission.py  serializer.py  service.py  signals.py  urls.py  utils.py
backend/apps/user/views/: loginLogout.py  registration.py
backend/config/: baseModel.py  base_serializer.py  permissions.py  urls.py
backend/config/settings/: __init__.py  base.py  development.py  production.py
backend/exceptions/: exception_handler.py
config/: urls.py
exceptions/: custom_handler.py  exception_handler.py  views.py
frontEnd/: Dockerfile  package-lock.json  package.json
front_end/: package-lock.json  package.json
my_school/: db.sqlite3  urls.py
school_fee/: apps.py  decorator.py  serializers.py  signal.py  urls.py
school_users/: models.py  permissions.py  serializers.py  urls.py  views.py
(+148 files in other folders)
